--- a/.github/workflows/td-project-automation.yml
+++ b/.github/workflows/td-project-automation.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            // Placeholders will be replaced by install-td.sh
+            // Placeholders replaced by install-td.sh
